# inkpacket

./: .gitmodules  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md
demo/: README.md  standalone_demo.sh
examples/: CMakeLists.txt  basic.cpp  build_demo.sh  complete_demo.cpp  crypto_demo.cpp  loader_demo.cpp  protected_app.cpp  secret_lib.cpp  secret_payload.txt  simple_patcher.cpp  wrong_key_demo.cpp
include/: ink_crypto.hpp
src/: ink_packet_builder.cpp  ink_packet_loader.cpp  ink_packet_memory.cpp  ink_packet_patcher.cpp  ink_packet_verify.cpp  ink_patch.cpp
src/platform/: linux.cpp  macos.cpp  windows.cpp
tests/: test_inkpacket.cpp
